--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <title>Play classic NES</title>
   </head>
   <body>
+<a href="#" onclick="history.back()">go back to world</a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
