--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Play classic NES</title>
+#root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}
   </head>
   <body>
 <a href="#" onclick="history.back()">go back to world</a>
