--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 #root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}
   </head>
   <body>
-<a href="#" onclick="history.back()">go back to world</a>
+<a style="text-decoration:none;" href="#" onclick="history.back()">go back to world</a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
