--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Play classic NES</title>
-#root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}
+    <title>Play classic NES</title><style>
+#root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}</style>
   </head>
   <body>
 <a style="text-decoration:none;" href="#" onclick="history.back()">go back to world</a>
