--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Play classic NES</title><style>
-#root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}</style>
+#root{background: url(https://i.imgur.com/NHbVIKv.jpeg);}
+.list-group-item {
+    position: relative;
+    display: block;
+    padding: .75rem 1.25rem;
+    margin-bottom: -1px;
+background-color: unset !important ;
+    border: 1px solid #dee2e6;
+}
+
+
+</style>
   </head>
   <body>
 <a style="text-decoration:none;" href="#" onclick="history.back()">go back to world</a>
