--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@ background-color: unset !important ;
 </style>
   </head>
   <body>
-<a style="text-decoration:none;" href="#" onclick="history.back()">go back to world</a>
+<a style="text-decoration:none;" href="https://centworld.space/world2.php?x=5410&y=540">go back to world</a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
